--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
+    "gulp": "^3.9.1",
+    "gulp-connect": "^2.3.1",
+    "http-proxy-middleware": "^0.10.0",
     "lite-server": "^2.0.1",
     "typescript": "^1.7.5",
     "typings": "^0.6.8"
